--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "lint:eslint-unused": "eslint --report-unused-disable-directives \"**/*.ts\"",
     "lint:eslint-no-inline": "eslint --no-inline-config \"**/*.ts\"",
     "lint:prettier": "prettier --check \"**/*.ts\"",
-    "prepare": "husky && husky install"
+    "prepare": "husky"
   },
   "author": "",
   "license": "ISC",
@@ -40,7 +40,7 @@
     "eslint": "^8.0.0",
     "eslint-config-love": "^52.0.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
-    "husky": "^8.0.0",
+    "husky": "^9.1.6",
     "jest": "^29.7.0",
     "lint-staged": "^15.2.10",
     "nodemon": "^3.1.4",
