--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "lint:prettier": "prettier --check \"**/*.ts\"",
     "prepare": "husky"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Umair Khan",
+  "license": "Apache-2.0",
   "dependencies": {
     "@tazama-lf/frms-coe-lib": "^5.1.0-rc.1",
     "amqplib": "^0.10.8",
