--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
   "name": "@tazama-lf/rabbitmq-relay-plugin",
-  "version": "2.1.1-rc",
+  "version": "2.1.1-rc.0",
   "description": "RabbitMQ plugin for tazama relay service",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
     "dist/**/*"
   ],
+  "publishConfig": {
+    "@tazama-lf:registry": "https://npm.pkg.github.com/",
+    "access": "public"
+  },
   "scripts": {
     "clean": "npx rimraf build node_modules coverage package-lock.json",
     "build": "npx tsc",
@@ -20,7 +24,11 @@
     "lint:prettier": "prettier --check \"**/*.ts\"",
     "prepare": "husky"
   },
-  "author": "Umair Khan",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/tazama-lf/relay-service-integration-rabbitmq.git"
+  },
+  "author": "",
   "license": "Apache-2.0",
   "dependencies": {
     "@tazama-lf/frms-coe-lib": "5.1.0-rc.2",
