--- a/package.json
+++ b/package.json
@@ -11,41 +11,42 @@
     "clean": "npx rimraf build node_modules coverage package-lock.json",
     "build": "npx tsc",
     "test": "jest",
-    "fix:eslint": "eslint --fix \"**/*.ts\"",
+    "fix:eslint": "eslint --fix",
     "fix:prettier": "prettier --write \"**/*.ts\"",
     "lint": "npm run lint:eslint && npm run lint:prettier",
-    "lint:eslint": "eslint \"**/*.ts\"",
-    "lint:eslint-unused": "eslint --report-unused-disable-directives \"**/*.ts\"",
-    "lint:eslint-no-inline": "eslint --no-inline-config \"**/*.ts\"",
+    "lint:eslint": "eslint",
+    "lint:eslint-unused": "eslint --report-unused-disable-directives",
+    "lint:eslint-no-inline": "eslint --no-inline-config",
     "lint:prettier": "prettier --check \"**/*.ts\"",
     "prepare": "husky"
   },
   "author": "Umair Khan",
   "license": "Apache-2.0",
   "dependencies": {
-    "@tazama-lf/frms-coe-lib": "5.1.0-rc.2",
+    "@tazama-lf/frms-coe-lib": "5.1.0-rc.7",
     "amqplib": "^0.10.8",
-    "dotenv": "^16.5.0",
+    "dotenv": "^17.2.0",
     "tslib": "^2.8.1"
   },
   "devDependencies": {
-    "@stylistic/eslint-plugin": "^2.1.0",
+    "@eslint-community/eslint-plugin-eslint-comments": "^4.5.0",
+    "@stylistic/eslint-plugin": "^5.2.0",
     "@types/amqplib": "^0.10.7",
-    "@types/jest": "^29.5.12",
-    "@types/node": "^14.14.41",
-    "@typescript-eslint/eslint-plugin": "^7.12.0",
-    "@typescript-eslint/parser": "^7.12.0",
-    "eslint": "^8.0.0",
-    "eslint-config-love": "^52.0.0",
-    "eslint-plugin-eslint-comments": "^3.2.0",
-    "husky": "^9.1.6",
-    "jest": "^29.7.0",
-    "lint-staged": "^15.2.10",
-    "nodemon": "^3.1.4",
-    "prettier": "^3.3.1",
-    "ts-jest": "^29.2.5",
+    "@types/jest": "^30.0.0",
+    "@types/node": "^24.0.15",
+    "@typescript-eslint/eslint-plugin": "^8.37.0",
+    "@typescript-eslint/parser": "^8.37.0",
+    "eslint": "^9.31.0",
+    "eslint-config-love": "^121.0.0",
+    "eslint-config-prettier": "^10.1.8",
+    "husky": "^9.1.7",
+    "jest": "^30.0.4",
+    "lint-staged": "^16.1.2",
+    "nodemon": "^3.1.10",
+    "prettier": "^3.6.2",
+    "ts-jest": "^29.4.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.5.4"
+    "typescript": "^5.8.3"
   },
   "lint-staged": {
     "*.{js,ts}": [
