build: fixed package.json inconsistencies

--- a/package.json
+++ b/package.json
@@ -4,16 +4,22 @@
   "description": "Tazama relay-service plug-in for RabbitMQ integration",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/tazama-lf/relay-service-integration-rabbitmq.git"
+  },
   "files": [
     "dist/**/*"
   ],
   "publishConfig": {
+    "registry": "https://npm.pkg.github.com/",
     "@tazama-lf:registry": "https://npm.pkg.github.com/",
     "access": "public"
   },
   "scripts": {
-    "clean": "npx rimraf build node_modules coverage package-lock.json",
+    "clean": "npx rimraf dist node_modules coverage package-lock.json",
     "build": "npx tsc",
+    "dry": "npm publish --dry-run",
     "test": "jest",
     "fix:eslint": "eslint --fix",
     "fix:prettier": "prettier --write \"**/*.ts\"",
@@ -24,6 +30,10 @@
     "lint:prettier": "prettier --check \"**/*.ts\"",
     "prepare": "husky"
   },
+  "keywords": [
+    "rabbitmq",
+    "relay-service"
+  ],
   "author": "Tazama.org",
   "license": "Apache-2.0",
   "dependencies": {
